--- a/webapp/etc/nginx/conf.d/default.conf
+++ b/webapp/etc/nginx/conf.d/default.conf
@@ -15,7 +15,7 @@ server {
 
   client_max_body_size 10m;
   root /public/;
-  access_log /var/log/nginx/access_log json;
+  access_log /var/log/nginx/access.log json;
 
   location / {
     proxy_set_header Host $host;
