--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -34,6 +34,7 @@ services:
 
   mysql:
     image: mysql:8.0
+    container_name: database
     environment:
       #- "TZ=Asia/Tokyo"
       - "MYSQL_ROOT_HOST=%"
